- First look of Version 2.0

--- a/QRCodeScannerGenerator/App.config
+++ b/QRCodeScannerGenerator/App.config
@@ -13,6 +13,9 @@
             <setting name="Browser" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Scan_code" serializeAs="String">
+                <value />
+            </setting>
         </QRCodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
