--- a/QRCodeScannerGenerator/Properties/Settings.settings
+++ b/QRCodeScannerGenerator/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Browser" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Scan_code" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
