--- a/QRCodeScannerGenerator/App.config
+++ b/QRCodeScannerGenerator/App.config
@@ -16,6 +16,9 @@
             <setting name="Scan_code" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Generate_code" serializeAs="String">
+                <value />
+            </setting>
         </QRCodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
