--- a/QRCodeScannerGenerator/App.config
+++ b/QRCodeScannerGenerator/App.config
@@ -19,6 +19,12 @@
             <setting name="Generate_code" serializeAs="String">
                 <value />
             </setting>
+            <setting name="HideOnMinimize" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="HideOnClose" serializeAs="String">
+                <value>False</value>
+            </setting>
         </QRCodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
