--- a/QRCodeScannerGenerator/Properties/Settings.settings
+++ b/QRCodeScannerGenerator/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="Generate_code" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="HideOnMinimize" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="HideOnClose" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
