--- a/QRCodeScannerGenerator/QRCodeScannerGenerator.csproj
+++ b/QRCodeScannerGenerator/QRCodeScannerGenerator.csproj
@@ -102,6 +102,9 @@
     <Compile Include="SettingsWidget.xaml.cs">
       <DependentUpon>SettingsWidget.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VideoPreviewWidget.xaml.cs">
+      <DependentUpon>VideoPreviewWidget.xaml</DependentUpon>
+    </Compile>
     <Content Include="i18N\MainWindow.en-US.xaml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -119,6 +122,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SettingsWidget.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VideoPreviewWidget.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
