- generating code size settings - cleanup - autotype not in tray fix - auto generate code - ctrl + s

--- a/QRCodeScannerGenerator/App.config
+++ b/QRCodeScannerGenerator/App.config
@@ -25,6 +25,12 @@
             <setting name="HideOnClose" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="GenerateWidth" serializeAs="String">
+                <value>300</value>
+            </setting>
+            <setting name="GenerateHeight" serializeAs="String">
+                <value>100</value>
+            </setting>
         </QRCodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
