--- a/QRCodeScannerGenerator/Properties/Settings.settings
+++ b/QRCodeScannerGenerator/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="HideOnClose" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="GenerateWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">300</Value>
+    </Setting>
+    <Setting Name="GenerateHeight" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
