--- a/QRCodeScannerGenerator/App.config
+++ b/QRCodeScannerGenerator/App.config
@@ -31,6 +31,9 @@
             <setting name="GenerateHeight" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="AutotypeHotkey" serializeAs="String">
+                <value>Ctrl + Alt + D</value>
+            </setting>
         </QRCodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
