--- a/QRCodeScannerGenerator/Properties/Settings.settings
+++ b/QRCodeScannerGenerator/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="AutotypeHotkey" Type="System.String" Scope="User">
       <Value Profile="(Default)">Ctrl + Alt + D</Value>
     </Setting>
+    <Setting Name="Autostart" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="Autostart_minimized" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
