--- a/QRCodeScannerGenerator/App.config
+++ b/QRCodeScannerGenerator/App.config
@@ -34,6 +34,12 @@
             <setting name="AutotypeHotkey" serializeAs="String">
                 <value>Ctrl + Alt + D</value>
             </setting>
+            <setting name="Autostart" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Autostart_minimized" serializeAs="String">
+                <value>True</value>
+            </setting>
         </QRCodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
