--- a/QRCodeScannerGenerator/packages.config
+++ b/QRCodeScannerGenerator/packages.config
@@ -3,8 +3,8 @@
   <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
-  <package id="MaterialDesignColors" version="2.0.0-ci2347" targetFramework="net472" />
-  <package id="MaterialDesignThemes" version="4.0.0-ci2347" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="2.0.0" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
   <package id="Tyrrrz.Extensions" version="1.6.5" targetFramework="net472" />
   <package id="ZXing.Net" version="0.16.6" targetFramework="net472" />
 </packages>
