--- a/CodeScannerGenerator/CodeScannerGenerator.csproj
+++ b/CodeScannerGenerator/CodeScannerGenerator.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{870E4352-1B11-4DF0-A920-F0BE7E1730A1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>QRCodeScannerGenerator</RootNamespace>
-    <AssemblyName>QRCodeScannerGenerator</AssemblyName>
+    <RootNamespace>CodeScannerGenerator</RootNamespace>
+    <AssemblyName>CodeScannerGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
