- autotype confirmation as an option

--- a/CodeScannerGenerator/App.config
+++ b/CodeScannerGenerator/App.config
@@ -40,6 +40,9 @@
             <setting name="Autostart_minimized" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ConfirmAutotype" serializeAs="String">
+                <value>True</value>
+            </setting>
         </CodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
