--- a/CodeScannerGenerator/Properties/Settings.settings
+++ b/CodeScannerGenerator/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="Autostart_minimized" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ConfirmAutotype" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
