--- a/CodeScannerGenerator/App.config
+++ b/CodeScannerGenerator/App.config
@@ -43,6 +43,15 @@
             <setting name="ConfirmAutotype" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ShowFloatingButton" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="FloatingButtonTop" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="FloatingButtonLeft" serializeAs="String">
+                <value>0</value>
+            </setting>
         </CodeScannerGenerator.Properties.Settings>
     </userSettings>
   <runtime>
