--- a/CodeScannerGenerator/packages.config
+++ b/CodeScannerGenerator/packages.config
@@ -5,6 +5,7 @@
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.0" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
+  <package id="MixERP.Net.VCards" version="1.0.7" targetFramework="net472" />
   <package id="Tyrrrz.Extensions" version="1.6.5" targetFramework="net472" />
   <package id="ZXing.Net" version="0.16.6" targetFramework="net472" />
 </packages>
